--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,10 +1,12 @@
-/*$primary-color: #9f186c;
-$secondary-color: #A0186C;
-$h1-color: #696969;*/
 $error: #FF3562;
 $primary-color: #AA076B;
 $secondary-color: #A0186C;
 $h1-color: #919191;
+
+/* NAVBAR*/
+$navbar-home-color: rgba(0, 0, 0, 0.25);
+$navbar-pages-color: #f6f6f6;
+$navbar-active-link: #93025C;
 
 
 /* FOOTER */
