--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -114,7 +114,7 @@ body {
   }
 }
 /*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 2000px) {
+@media only screen and (min-width: 1025px) and (max-width: 2500px) {
   body {
     max-width: 1280px;
     min-width: 1025px;
@@ -157,4 +157,19 @@ body {
       }
     }
   }
+}
+
+/*DESKTOP HI-RES*/
+@media only screen and (min-width: 1281px) and (max-width: 2500px) {
+  body {
+    max-width: 2500px;
+    min-width: 1281px;
+    @include bg-img("../img/home.png", no-repeat, cover);
+    background-position: top center;
+    #testimonials {
+      margin-bottom: 0;
+      padding-bottom: 0;
+        }
+  }
+    
 }
