--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -68,8 +68,10 @@ body {
         }
 
         footer {
+          width:100%;
           height: auto;
           background-color: white;
+          text-align: center;
         }
       }
     }
