--- a/sass/pages.css
+++ b/sass/pages.css
@@ -17,7 +17,8 @@ $links-icon-fh: #330d22;*
 /*primary button*/
 /*submit/success button */
 #mobnav {
-  background-color: rgba(0, 0, 0, 0.25) !important; }
+  background-color: rgba(0, 0, 0, 0.25) !important;
+  padding: 20px; }
   #mobnav .nav-link {
     color: #212121; }
     #mobnav .nav-link:visited {
@@ -277,7 +278,7 @@ body {
           -moz-background-size: cover;
           -webkit-background-size: cover;
           background-position: center;
-          min-height: 644px; }
+          min-height: 760px; }
         body main .p-content #what-left {
           background-image: url("../img/what-we-do-1.jpg");
           background-repeat: no-repeat;
@@ -286,7 +287,7 @@ body {
           -moz-background-size: cover;
           -webkit-background-size: cover;
           background-position: center;
-          min-height: 644px; }
+          min-height: 760px; }
         body main .p-content #contact-left {
           background-image: url("../img/contact-us.jpg");
           background-repeat: no-repeat;
@@ -295,7 +296,7 @@ body {
           -moz-background-size: cover;
           -webkit-background-size: cover;
           background-position: center;
-          min-height: 644px; }
+          min-height: 760px; }
         body main .p-content .p-left {
           display: block;
           width: 55%;
@@ -304,8 +305,9 @@ body {
           flex: 1 1 50%; }
         body main .p-content .p-text {
           max-width: 45%;
-          height: 100%;
-          flex: 1 1 50%;
+          height: auto;
+          align-items: center;
+          flex: 1 1 45%;
           padding: 60px;
           margin: 0 auto; }
           body main .p-content .p-text img {
