--- a/sass/main.css
+++ b/sass/main.css
@@ -1,292 +1,2 @@
-/* NAVBAR*/
-/* FOOTER */
-/* HOME */
-/* BUTTON COLORS */
-/*$button-primary: #E345A2;
-$button-hover: #CF3F94;*/
-/*$primary-color: #9f186c;
-$secondary-color: #A0186C;
-$h1-color: #696969;
-$text-color: #D1D1D1;
-$links-icon-f: #DE0D92;
-$links-icon-fh: #330d22;*
-#61045F #AA076B*/
-/*background image */
-/*flexbox */
-/*link colors */
-/*primary button*/
-/*submit/success button */
-#mobnav {
-  background-color: rgba(0, 0, 0, 0.25) !important;
-  padding: 20px; }
-  #mobnav .nav-link {
-    color: #212121; }
-    #mobnav .nav-link:visited {
-      color: #212121; }
-    #mobnav .nav-link:hover {
-      color: #AA076B; }
-    #mobnav .nav-link:active {
-      color: #fff; }
-  #mobnav .navbar-brand {
-    color: #AA076B;
-    margin-right: 0; }
-    #mobnav .navbar-brand img {
-      width: 20%;
-      margin-right: 20px; }
-  #mobnav .navbar-toggler {
-    color: #AA076B;
-    border-color: rgba(0, 0, 0, 0); }
-    #mobnav .navbar-toggler .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
-  #mobnav #navbarNavAltMarkup a.nav-item.nav-link.active {
-    color: #93025C; }
-
-/*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 2500px) {
-  #mobnav {
-    background-color: rgba(0, 0, 0, 0.15) !important;
-    height: 82px;
-    width: 100vw; }
-    #mobnav .navbar-brand {
-      color: #AA076B;
-      margin-right: 0; }
-      #mobnav .navbar-brand img {
-        width: 20%;
-        margin-right: 20px; }
-    #mobnav .navbar-toggler {
-      color: #AA076B;
-      border-color: rgba(0, 0, 0, 0); }
-      #mobnav .navbar-toggler .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
-    #mobnav #navbarNavAltMarkup a.nav-item.nav-link.active {
-      color: #fff; } }
-footer {
-  width: 100vw;
-  min-height: 245px;
-  margin: 0 auto;
-  padding: 20px 10px 10px 10px;
-  font-size: 0.8rem;
-  text-align: center;
-  line-height: 2;
-  background-color: #f6f6f6;
-  color: #5e3858; }
-  footer a {
-    color: #AC88AD; }
-    footer a:visited {
-      color: #AC88AD; }
-    footer a:hover {
-      color: #DE0D92; }
-    footer a:active {
-      color: #ca9ab5; }
-  footer .phonenum {
-    color: #5e3858; }
-  footer .fab {
-    font-size: 1.25rem;
-    color: #AC88AD;
-    margin: 5px 10px 16px; }
-    footer .fab:hover {
-      color: #DE0D92; }
-  footer .contact-links {
-    margin: 10px 0; }
-
-/*TABLET PORTRAIT*/
-@media only screen and (min-width: 628px) and (max-width: 1024px) {
-  footer {
-    min-height: 194px; }
-    footer .contact-links {
-      margin: 15px 0; }
-    footer .jalika {
-      text-align: right; }
-    footer .shennice {
-      text-align: left; } }
-/*TABLET LANDSCAPE*/
-@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
-  footer {
-    min-height: 194px; }
-    footer .contact-links {
-      margin: 15px 0; }
-    footer .jalika {
-      text-align: right; }
-    footer .shennice {
-      text-align: left; } }
-/*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 1280px) {
-  footer {
-    min-height: 194px; }
-    footer .contact-links {
-      margin: 15px 0; }
-    footer .jalika {
-      text-align: right; }
-    footer .shennice {
-      text-align: left; } }
-body main .button-container {
-  margin: 30px auto;
-  width: 80%; }
-  body main .button-container #cta-button {
-    background-color: #DE0D92;
-    border-color: #DE0D92; }
-    body main .button-container #cta-button:hover {
-      background-color: #E439A5;
-      border-color: #E439A5; }
-body main .form-button {
-  /*margin: 0 auto;*/ }
-  body main .form-button #send-button {
-    background-color: #DE0D92;
-    border-color: #DE0D92; }
-    body main .form-button #send-button:hover {
-      background-color: #E439A5;
-      border-color: #E439A5; }
-  body main .form-button #send-button {
-    width: 100%;
-    margin: 0 auto; }
-
-body {
-  max-width: 640px;
-  min-width: 320px;
-  height: auto;
-  margin: 0 auto;
-  overflow-x: hidden;
-  flex-flow: column nowrap;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: start;
-  align-items: stretch;
-  background-image: url("../img/home-mob.png");
-  background-repeat: no-repeat;
-  background-size: auto;
-  -o-background-size: auto;
-  -moz-background-size: auto;
-  -webkit-background-size: auto; }
-  body #deskintro {
-    display: none; }
-  body header {
-    width: 100%;
-    height: auto;
-    flex: 1 1 100%; }
-  body main {
-    width: 100%;
-    height: auto;
-    flex: 1 1 100%; }
-    body main #intro {
-      max-width: 100%;
-      height: 600px;
-      text-align: center;
-      display: table; }
-      body main #intro #intro-overlay {
-        max-width: 100%;
-        height: 600px;
-        background-color: rgba(0, 0, 0, 0.15);
-        text-align: center;
-        display: table; }
-        body main #intro #intro-overlay h1 {
-          width: 100%;
-          margin: 0 auto;
-          display: block;
-          padding: 0 10px;
-          font-size: 2.8rem;
-          color: white;
-          vertical-align: middle;
-          display: table-cell; }
-  body #testimonials {
-    padding-bottom: 50px; }
-    body #testimonials .carousel-inner {
-      width: 100%;
-      min-height: 350px;
-      padding-top: 50px;
-      background-color: white; }
-      body #testimonials .carousel-inner .carousel-item {
-        width: 80%;
-        line-height: 2;
-        margin: 0 auto;
-        float: none; }
-        body #testimonials .carousel-inner .carousel-item .blockquote {
-          font-size: 1rem; }
-        body #testimonials .carousel-inner .carousel-item footer {
-          width: 100%;
-          height: auto;
-          background-color: white;
-          text-align: center; }
-    body #testimonials .carousel-indicators li {
-      background-color: #AA076B; }
-
-/* ================================================================= */
-/*TABLET PORTRAIT*/
-@media only screen and (min-width: 628px) and (max-width: 1024px) {
-  body {
-    max-width: 1024px;
-    min-width: 628px;
-    background-image: url("../img/home.png");
-    background-repeat: no-repeat;
-    background-size: auto;
-    -o-background-size: auto;
-    -moz-background-size: auto;
-    -webkit-background-size: auto; }
-    body main #intro #intro-overlay h1 {
-      font-size: 4rem; }
-    body #testimonials .carousel-inner {
-      height: 450px;
-      padding: 100px 0 80px; } }
-/*TABLET LANDSCAPE*/
-@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
-  #testimonials .carousel-inner {
-    padding: 130px 0 80px; } }
-/*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 2500px) {
-  body {
-    max-width: 1280px;
-    min-width: 1025px;
-    background-image: url("../img/home.png");
-    background-repeat: no-repeat;
-    background-size: auto;
-    -o-background-size: auto;
-    -moz-background-size: auto;
-    -webkit-background-size: auto;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: stretch; }
-    body main #intro {
-      height: 670px;
-      background-color: rgba(0, 0, 0, 0.15);
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: flex-end;
-      align-items: center; }
-      body main #intro #intro-overlay {
-        display: none; }
-      body main #intro #deskintro {
-        display: block;
-        width: 50%;
-        margin: 0;
-        padding: 0 50px 0 0;
-        text-align: right;
-        line-height: 1.7;
-        font-size: 3.75rem;
-        font-weight: bold;
-        color: white; }
-    body #testimonials .carousel-inner {
-      width: 100%;
-      min-height: 344px;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: center;
-      align-items: center; }
-      body #testimonials .carousel-inner .carousel-item {
-        width: 60%; } }
-/*DESKTOP HI-RES*/
-@media only screen and (min-width: 1281px) and (max-width: 2500px) {
-  body {
-    max-width: 2500px;
-    min-width: 1281px;
-    background-image: url("../img/home.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-position: top center; }
-    body #testimonials {
-      margin-bottom: 0;
-      padding-bottom: 0; } }
-
+#mobnav{background-color:rgba(0,0,0,0.25) !important;padding:20px}#mobnav .nav-link{color:#212121}#mobnav .nav-link:visited{color:#212121}#mobnav .nav-link:hover{color:#AA076B}#mobnav .nav-link:active{color:#fff}#mobnav .navbar-brand{color:#AA076B;margin-right:0}#mobnav .navbar-brand img{width:20%;margin-right:20px}#mobnav .navbar-toggler{color:#AA076B;border-color:transparent}#mobnav .navbar-toggler .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")}#mobnav #navbarNavAltMarkup a.nav-item.nav-link.active{color:#93025C}@media only screen and (min-width: 1025px) and (max-width: 2500px){#mobnav{background-color:rgba(0,0,0,0.15) !important;height:82px;width:100vw}#mobnav .navbar-brand{color:#AA076B;margin-right:0}#mobnav .navbar-brand img{width:20%;margin-right:20px}#mobnav .navbar-toggler{color:#AA076B;border-color:transparent}#mobnav .navbar-toggler .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")}#mobnav #navbarNavAltMarkup a.nav-item.nav-link.active{color:#fff}}footer{width:100vw;min-height:245px;margin:0 auto;padding:20px 10px 10px 10px;font-size:0.8rem;text-align:center;line-height:2;background-color:#f6f6f6;color:#5e3858}footer a{color:#AC88AD}footer a:visited{color:#AC88AD}footer a:hover{color:#DE0D92}footer a:active{color:#ca9ab5}footer .phonenum{color:#5e3858}footer .fab{font-size:1.25rem;color:#AC88AD;margin:5px 10px 16px}footer .fab:hover{color:#DE0D92}footer .contact-links{margin:10px 0}@media only screen and (min-width: 628px) and (max-width: 1024px){footer{min-height:194px}footer .contact-links{margin:15px 0}footer .jalika{text-align:right}footer .shennice{text-align:left}}@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape){footer{min-height:194px}footer .contact-links{margin:15px 0}footer .jalika{text-align:right}footer .shennice{text-align:left}}@media only screen and (min-width: 1025px) and (max-width: 1280px){footer{min-height:194px}footer .contact-links{margin:15px 0}footer .jalika{text-align:right}footer .shennice{text-align:left}}body main .button-container{margin:30px auto;width:80%}body main .button-container #cta-button{background-color:#DE0D92;border-color:#DE0D92}body main .button-container #cta-button:hover{background-color:#E439A5;border-color:#E439A5}body main .form-button #send-button{background-color:#DE0D92;border-color:#DE0D92}body main .form-button #send-button:hover{background-color:#E439A5;border-color:#E439A5}body main .form-button #send-button{width:100%;margin:0 auto}body{max-width:640px;min-width:320px;height:auto;margin:0 auto;overflow-x:hidden;flex-flow:column nowrap;display:flex;flex-flow:column nowrap;justify-content:start;align-items:stretch;background-image:url("../img/home-mob.png");background-repeat:no-repeat;background-size:auto;-o-background-size:auto;-moz-background-size:auto;-webkit-background-size:auto}body #deskintro{display:none}body header{width:100%;height:auto;flex:1 1 100%}body main{width:100%;height:auto;flex:1 1 100%}body main #intro{max-width:100%;height:600px;text-align:center;display:table}body main #intro #intro-overlay{max-width:100%;height:600px;background-color:rgba(0,0,0,0.15);text-align:center;display:table}body main #intro #intro-overlay h1{width:100%;margin:0 auto;display:block;padding:0 10px;font-size:2.8rem;color:white;vertical-align:middle;display:table-cell}body #testimonials{padding-bottom:50px}body #testimonials .carousel-inner{width:100%;min-height:350px;padding-top:50px;background-color:white}body #testimonials .carousel-inner .carousel-item{width:80%;line-height:2;margin:0 auto;float:none}body #testimonials .carousel-inner .carousel-item .blockquote{font-size:1rem}body #testimonials .carousel-inner .carousel-item footer{width:100%;height:auto;background-color:white;text-align:center}body #testimonials .carousel-indicators li{background-color:#AA076B}@media only screen and (min-width: 628px) and (max-width: 1024px){body{max-width:1024px;min-width:628px;background-image:url("../img/home.png");background-repeat:no-repeat;background-size:auto;-o-background-size:auto;-moz-background-size:auto;-webkit-background-size:auto}body main #intro #intro-overlay h1{font-size:4rem}body #testimonials .carousel-inner{height:450px;padding:100px 0 80px}}@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape){#testimonials .carousel-inner{padding:130px 0 80px}}@media only screen and (min-width: 1025px) and (max-width: 2500px){body{max-width:1280px;min-width:1025px;background-image:url("../img/home.png");background-repeat:no-repeat;background-size:auto;-o-background-size:auto;-moz-background-size:auto;-webkit-background-size:auto;display:flex;flex-flow:column nowrap;justify-content:flex-start;align-items:stretch}body main #intro{height:670px;background-color:rgba(0,0,0,0.15);display:flex;flex-flow:row nowrap;justify-content:flex-end;align-items:center}body main #intro #intro-overlay{display:none}body main #intro #deskintro{display:block;width:50%;margin:0;padding:0 50px 0 0;text-align:right;line-height:1.7;font-size:3.75rem;font-weight:bold;color:white}body #testimonials .carousel-inner{width:100%;min-height:344px;display:flex;flex-flow:column nowrap;justify-content:center;align-items:center}body #testimonials .carousel-inner .carousel-item{width:60%}}@media only screen and (min-width: 1281px) and (max-width: 2500px){body{max-width:2500px;min-width:1281px;background-image:url("../img/home.png");background-repeat:no-repeat;background-size:cover;-o-background-size:cover;-moz-background-size:cover;-webkit-background-size:cover;background-position:top center}body #testimonials{margin-bottom:0;padding-bottom:0}}
 /*# sourceMappingURL=main.css.map */
