--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   width: 100vw;
   min-height: 245px;
-  margin: 0 auto;
+  margin: 0 auto !important;
   padding: 20px 10px 10px 10px;
   font-size: 0.8rem;
   text-align: center;
