--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -1,4 +1,5 @@
 body {
+
   #deskintro {
     display: none;
   }
@@ -27,14 +28,18 @@ body {
       height: 600px;
       text-align: center;
       display: table;
-
+      -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 2s; /* Firefox < 16 */
+       -ms-animation: fadein 2s; /* Internet Explorer */
+        -o-animation: fadein 2s; /* Opera < 12.1 */
+           animation: fadein 2s;
       #intro-overlay {
         max-width: 100%;
         height: 600px;
         background-color: $home-bgoverlay;
         text-align: center;
         display: table;
-
+      
         h1 {
           width: 100%;
           margin: 0 auto;
@@ -44,43 +49,14 @@ body {
           color: white;
           vertical-align: middle;
           display: table-cell;
+        
         }
       }
-    }
-  }
-
-  #testimonials {
-    padding-bottom: 50px;
-    .carousel-inner {
-      width: 100%;
-      min-height: 350px;
-      padding-top: 50px;
-      background-color: white;
-
-      .carousel-item {
-        width: 80%;
-        line-height: 2;
-        margin: 0 auto;
-        float: none;
-
-        .blockquote {
-          font-size: 1rem;
-        }
-
-        footer {
-          width:100%;
-          height: auto;
-          background-color: white;
-          text-align: center;
-        }
-      }
-    }
-
-    .carousel-indicators li {
-      background-color: $primary-color;
     }
   }
 }
+
+  
 /* ================================================================= */
 /*TABLET PORTRAIT*/
 @media only screen and (min-width: 628px) and (max-width: 1024px) {
@@ -147,22 +123,12 @@ body {
       }
     }
 
-    #testimonials {
-      .carousel-inner {
-        width: 100%;
-        min-height: 344px;
-        @include flex(flex, column nowrap, center, center);
 
-        .carousel-item {
-          width: 60%;
-        }
-      }
-    }
   }
 }
 
 /*DESKTOP HI-RES*/
-@media only screen and (min-width: 1281px) and (max-width: 2500px) {
+@media only screen and (min-width: 1281px) and (max-width: 3000px) {
   body {
     max-width: 2500px;
     min-width: 1281px;
