--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,7 @@
 @import "component/header";
 @import "component/footer";
 @import "component/buttons";
+@import "component/testimonial-slider";
+@import "component/contact-form-style";
 
 @import "layout/home-main";
