--- a/sass/component/_contact-form-style.scss
+++ b/sass/component/_contact-form-style.scss
@@ -16,15 +16,17 @@
       .has-error,
       .help-block,
       .with-errors {
-        ul{
-          margin: 10px 0 0 0;;
+        ul {
+          margin: 10px 0 0 0;
+          ;
+
           li {
             color: $error;
             font-size: 0.8rem;
             padding-left: 5px;
           }
         }
-        
+
       }
     }
 
@@ -33,17 +35,12 @@
     }
   }
 }
+
 @media only screen and (min-width: 628px) and (max-width: 1024px) {
 
   #form-container {
-      .form-button {
-        margin-top: 15px;
+    .form-button {
+      margin-top: 15px;
     }
   }
-  
-  
-  
-  
-  
-  
 }
