--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -30,7 +30,7 @@ footer {
   .contact-links {
     margin: 10px 0;
   }
- 
+
 }
 
 
@@ -38,16 +38,19 @@ footer {
 @media only screen and (min-width: 628px) and (max-width: 1024px) {
   footer {
     min-height: 194px;
+
     .contact-links {
       margin: 15px 0;
     }
+
     .jalika {
       text-align: right;
     }
+
     .shennice {
       text-align: left;
     }
-  
+
   }
 }
 
@@ -55,34 +58,40 @@ footer {
 @media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
   footer {
     min-height: 194px;
+
     .contact-links {
       margin: 15px 0;
     }
+
     .jalika {
       text-align: right;
     }
+
     .shennice {
       text-align: left;
     }
-  
+
   }
-  
+
 }
 
 /*DESKTOP*/
 @media only screen and (min-width: 1025px) and (max-width: 1280px) {
 
   footer {
-    min-height: 194px;;
+    min-height: 194px;
+    ;
+
     .contact-links {
       margin: 15px 0;
     }
+
     .jalika {
       text-align: right;
     }
+
     .shennice {
       text-align: left;
     }
-  
   }
 }
