--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -3,6 +3,7 @@ body {
   #deskintro {
     display: none;
   }
+
   max-width: 640px;
   min-width: 320px;
   height: auto;
@@ -28,18 +29,23 @@ body {
       height: 600px;
       text-align: center;
       display: table;
-      -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-      -moz-animation: fadein 2s; /* Firefox < 16 */
-       -ms-animation: fadein 2s; /* Internet Explorer */
-        -o-animation: fadein 2s; /* Opera < 12.1 */
-           animation: fadein 2s;
+      -webkit-animation: fadein 2s;
+      /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 2s;
+      /* Firefox < 16 */
+      -ms-animation: fadein 2s;
+      /* Internet Explorer */
+      -o-animation: fadein 2s;
+      /* Opera < 12.1 */
+      animation: fadein 2s;
+
       #intro-overlay {
         max-width: 100%;
         height: 600px;
         background-color: $home-bgoverlay;
         text-align: center;
         display: table;
-      
+
         h1 {
           width: 100%;
           margin: 0 auto;
@@ -49,14 +55,14 @@ body {
           color: white;
           vertical-align: middle;
           display: table-cell;
-        
+
         }
       }
     }
   }
 }
 
-  
+
 /* ================================================================= */
 /*TABLET PORTRAIT*/
 @media only screen and (min-width: 628px) and (max-width: 1024px) {
@@ -83,6 +89,7 @@ body {
     }
   }
 }
+
 /*TABLET LANDSCAPE*/
 @media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
   #testimonials {
@@ -91,6 +98,7 @@ body {
     }
   }
 }
+
 /*DESKTOP*/
 @media only screen and (min-width: 1025px) and (max-width: 2500px) {
   body {
@@ -134,10 +142,11 @@ body {
     min-width: 1281px;
     @include bg-img("../img/home.png", no-repeat, cover);
     background-position: top center;
+
     #testimonials {
       margin-bottom: 0;
       padding-bottom: 0;
-        }
+    }
   }
-    
+
 }
