--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -2,10 +2,10 @@
 @mixin bg-img($url, $repeat, $size) {
   background-image: url($url);
   background-repeat: $repeat;
-  background-size: $size;
-  -o-background-size: $size;
-  -moz-background-size: $size;
-  -webkit-background-size: $size;
+  background-size: $size !important;
+  -o-background-size: $size !important;
+  -moz-background-size: $size !important;
+  -webkit-background-size: $size !important;
 }
 
 /*flexbox */
