--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -130,8 +130,6 @@ body {
         }
       }
     }
-
-
   }
 }
 
@@ -143,10 +141,33 @@ body {
     @include bg-img("../img/home.png", no-repeat, contain);
     background-position: top center;
 
-    #testimonials {
-      margin-bottom: 0;
-      padding-bottom: 0;
+    main {
+      #intro {
+        height: 670px;
+        background-color: $home-bgoverlay;
+        @include flex(flex, row nowrap, flex-end, center);
+
+        #intro-overlay {
+          display: none;
+        }
+
+        #deskintro {
+          display: block;
+          width: 50%;
+          margin: 0;
+          padding: 0 50px 0 0;
+          text-align: right;
+          line-height: 1.7;
+          font-size: 3.75rem;
+          font-weight: bold;
+          color: white;
+        }
+      }
+
+      #testimonials {
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
     }
   }
-
 }
