--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -9,9 +9,10 @@
   .navbar-brand {
     color: $primary-color;
     margin-right: 0;
+    width: 250px;
 
     img {
-      width: 20%;
+      width: 35%;
       margin-right: 20px;
     }
   }
@@ -32,6 +33,27 @@
   }
 }
 
+/*TABLET LANDSCAPE*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
+  #mobnav {
+    background-color: $home-bgoverlay !important;
+    height: 82px;
+    width: 100vw;
+
+    .navbar-brand {
+      color: $primary-color;
+      margin-right: 20px;
+      width: auto;
+
+      img {
+        height: 54px;
+        width: auto;
+        margin-right: 20px;
+      }
+    }
+  }
+}
+
 /*DESKTOP*/
 @media only screen and (min-width: 1025px) and (max-width: 2500px) {
   #mobnav {
@@ -41,10 +63,12 @@
 
     .navbar-brand {
       color: $primary-color;
-      margin-right: 0;
+      margin-right: 20px;
+      width: auto;
 
       img {
-        width: 20%;
+        height: 54px;
+        width: auto;
         margin-right: 20px;
       }
     }
