--- a/sass/layout/_pages-main.scss
+++ b/sass/layout/_pages-main.scss
@@ -116,6 +116,7 @@ body {
   body {
     max-width: 1024px;
     min-width: 628px;
+    
 
     main {
       width: 85%;
@@ -160,7 +161,7 @@ body {
       @include flex(flex, column nowrap, center, center);
 
       .p-content {
-        width: 95%;
+        width: 100%;
         height: 100%;
         margin: 0 auto;
         @include flex(flex, row nowrap, space-between, center);
@@ -168,25 +169,25 @@ body {
         #who-left {
           @include bg-img('../img/who-we-are.jpg', no-repeat, cover);
           background-position: center;
-          min-height: 760px;
+          min-height: 100%;
         }
 
         #what-left {
           @include bg-img('../img/what-we-do-1.jpg', no-repeat, cover);
           background-position: 45% 0%;
-          min-height: 819px;
+          min-height: 100%;
         }
 
         #contact-left {
           @include bg-img('../img/contact-us.jpg', no-repeat, cover);
-          background-position: 25% 50%;
+          background-position: 26% 50%;
+          min-height: 100%;
         }
 
         .p-left {
           display: block;
           width: 50%;
-          min-height: 80%;
-          margin-left: 60px;
+          min-height: 100%;
           flex: 1 1 50%;
         }
 
@@ -195,7 +196,7 @@ body {
           height: auto;
           align-items: center;
           flex: 1 1 55%;
-          padding: 60px;
+          padding: 10px 50px 50px 50px;
           margin: 0 auto;
 
           img {
@@ -205,7 +206,7 @@ body {
           h1 {
             font-size: 1.9rem;
             padding-bottom: 20px;
-            margin: 60px 0 16px 0;
+            margin: 40px 0 16px 0;
             text-align: left;
             border-bottom: 2px solid $primary-color;
           }
